--- a/src/GUI/OfferOptionInterface.fxml
+++ b/src/GUI/OfferOptionInterface.fxml
@@ -12,15 +12,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="974.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.OfferOptionInterfaceController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.OfferOptionInterfaceController">
      <children>
-      <BorderPane layoutX="10.0" prefHeight="400.0" prefWidth="1058.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane layoutX="10.0" prefHeight="400.0" prefWidth="1227.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
             <HBox prefHeight="413.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
                   <VBox prefHeight="355.0" prefWidth="100.0">
                      <children>
-                        <Label prefHeight="18.0" prefWidth="101.0" text="Id offer">
+                        <Label prefHeight="18.0" prefWidth="101.0" text="Id offer" visible="false">
                            <VBox.margin>
                               <Insets top="10.0" />
                            </VBox.margin>
@@ -60,7 +60,7 @@
                               <Insets top="15.0" />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="label_id" text="Id">
+                        <Label fx:id="label_id" text="Id" visible="false">
                            <VBox.margin>
                               <Insets top="17.0" />
                            </VBox.margin>
@@ -69,47 +69,47 @@
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <TextField fx:id="id_offer">
+                        <TextField fx:id="id_offer" visible="false">
                            <VBox.margin>
                               <Insets top="8.0" />
                            </VBox.margin>
                         </TextField>
-                        <ChoiceBox fx:id="bateau_opt" prefWidth="150.0">
+                        <ChoiceBox fx:id="bateau_opt" prefWidth="150.0" stylesheets="@../css/style.css">
                            <VBox.margin>
                               <Insets top="8.0" />
                            </VBox.margin>
                         </ChoiceBox>
-                        <ChoiceBox fx:id="espace_opt" prefWidth="150.0">
+                        <ChoiceBox fx:id="espace_opt" prefWidth="150.0" stylesheets="@../css/style.css">
                            <VBox.margin>
                               <Insets top="8.0" />
                            </VBox.margin>
                         </ChoiceBox>
-                        <ChoiceBox fx:id="vol_opt" prefWidth="150.0">
+                        <ChoiceBox fx:id="vol_opt" prefWidth="150.0" stylesheets="@../css/style.css">
                            <VBox.margin>
                               <Insets top="8.0" />
                            </VBox.margin>
                         </ChoiceBox>
-                        <ChoiceBox fx:id="hotel_opt" prefWidth="150.0">
+                        <ChoiceBox fx:id="hotel_opt" prefWidth="150.0" stylesheets="@../css/style.css">
                            <VBox.margin>
                               <Insets top="7.0" />
                            </VBox.margin>
                         </ChoiceBox>
-                        <ChoiceBox fx:id="monument_opt" prefWidth="150.0">
+                        <ChoiceBox fx:id="monument_opt" prefWidth="150.0" stylesheets="@../css/style.css">
                            <VBox.margin>
                               <Insets top="9.0" />
                            </VBox.margin>
                         </ChoiceBox>
-                        <ChoiceBox fx:id="restaurant_opt" prefWidth="150.0">
+                        <ChoiceBox fx:id="restaurant_opt" prefWidth="150.0" stylesheets="@../css/style.css">
                            <VBox.margin>
                               <Insets top="8.0" />
                            </VBox.margin>
                         </ChoiceBox>
-                        <ChoiceBox fx:id="evenement_opt" prefWidth="150.0">
+                        <ChoiceBox fx:id="evenement_opt" prefWidth="150.0" stylesheets="@../css/style.css">
                            <VBox.margin>
                               <Insets top="7.0" />
                            </VBox.margin>
                         </ChoiceBox>
-                        <TextField fx:id="input_id">
+                        <TextField fx:id="input_id" visible="false">
                            <VBox.margin>
                               <Insets top="6.0" />
                            </VBox.margin>
@@ -120,9 +120,8 @@
             </HBox>
          </left>
          <center>
-            <TableView fx:id="tab_option" onMouseClicked="#getValues" prefHeight="362.0" prefWidth="764.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="tab_option" onMouseClicked="#getValues" prefHeight="338.0" prefWidth="982.0" BorderPane.alignment="CENTER">
                <columns>
-                  <TableColumn fx:id="tab_id" prefWidth="75.0" text="id" />
                   <TableColumn fx:id="tab_offer" prefWidth="82.39999389648438" text="id_offer " />
                   <TableColumn fx:id="tab_bateau" prefWidth="98.4000244140625" text="id_bateau " />
                   <TableColumn fx:id="tab_espace" prefWidth="76.79995727539062" text="id_espace " />
@@ -135,14 +134,18 @@
             </TableView>
          </center>
          <bottom>
-            <AnchorPane prefHeight="66.0" prefWidth="964.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="462.0" prefWidth="1270.0" BorderPane.alignment="CENTER">
                <children>
                   <Button fx:id="btn_ajout" layoutX="356.0" layoutY="14.0" mnemonicParsing="false" onAction="#ajouter" text="ajouter" />
                   <Button fx:id="btn_modif" layoutX="452.0" layoutY="14.0" mnemonicParsing="false" onAction="#modifier" text="modifier" />
                   <Button fx:id="btn_sup" layoutX="576.0" layoutY="14.0" mnemonicParsing="false" onAction="#supprime" text="supprime" />
+                  <Button fx:id="btn_return" layoutX="692.0" layoutY="14.0" mnemonicParsing="false" onAction="#retourne" text="Retourne au offre" />
                </children>
             </AnchorPane>
          </bottom>
+         <right>
+            <AnchorPane prefHeight="338.0" prefWidth="286.0" BorderPane.alignment="CENTER" />
+         </right>
       </BorderPane>
    </children>
 </AnchorPane>
