--- a/src/GUI/BateauxInterface.fxml
+++ b/src/GUI/BateauxInterface.fxml
@@ -11,13 +11,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="GUI.BateauxInterfaceController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.BateauxInterfaceController">
     <children>
-      <HBox layoutX="14.0" layoutY="18.0" prefHeight="413.0" prefWidth="200.0">
+      <HBox layoutX="14.0" layoutY="18.0" prefHeight="414.0" prefWidth="255.0">
          <children>
-            <VBox prefHeight="355.0" prefWidth="100.0">
+            <VBox prefHeight="414.0" prefWidth="132.0">
                <children>
-                  <Label prefHeight="18.0" prefWidth="101.0" text="compagnie_maritime">
+                  <Label prefHeight="18.0" prefWidth="131.0" text="compagnie_maritime">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
@@ -64,17 +64,17 @@
                   </Label>
                   <Label text="avis_bateau">
                      <VBox.margin>
-                        <Insets top="15.0" />
+                        <Insets top="50.0" />
                      </VBox.margin>
                   </Label>
-                  <Label fx:id="label_id" text="Id">
+                  <Label fx:id="label_id" text="Id" visible="false">
                      <VBox.margin>
                         <Insets top="17.0" />
                      </VBox.margin>
                   </Label>
                </children>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox prefHeight="414.0" prefWidth="131.0">
                <children>
                   <TextField fx:id="compMar">
                      <VBox.margin>
@@ -131,7 +131,7 @@
                         <Insets top="7.0" />
                      </VBox.margin>
                   </TextField>
-                  <TextField fx:id="input_id">
+                  <TextField fx:id="input_id" visible="false">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
@@ -140,9 +140,8 @@
             </VBox>
          </children>
       </HBox>
-      <TableView fx:id="tab_bateau" layoutX="223.0" layoutY="14.0" onMouseClicked="#getValues" prefHeight="326.0" prefWidth="861.0">
+      <TableView fx:id="tab_bateau" layoutX="284.0" layoutY="14.0" onMouseClicked="#getValues" prefHeight="326.0" prefWidth="791.0">
          <columns>
-            <TableColumn fx:id="tab_id" prefWidth="75.0" text="id" />
             <TableColumn fx:id="tab_comp" prefWidth="120.0" text="compagnie maritime" />
             <TableColumn fx:id="tab_depart" prefWidth="67.20001220703125" text="depart" />
             <TableColumn fx:id="tab_dest" prefWidth="84.79998779296875" text="destination" />
