--- a/src/GUI/ItemBateaux.fxml
+++ b/src/GUI/ItemBateaux.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="142.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="GUI.ItemBateauxController">
+<AnchorPane id="AnchorPane" prefHeight="142.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.ItemBateauxController">
     <children>
       <VBox layoutX="2.0" layoutY="1.0" prefHeight="148.0" prefWidth="592.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="1.0">
          <children>
@@ -25,19 +25,19 @@
                   </ImageView>
                   <AnchorPane prefHeight="159.0" prefWidth="126.0">
                      <children>
-                        <Label fx:id="date_deb" layoutX="10.0" layoutY="22.0" prefHeight="26.0" prefWidth="116.0" text="date dep" />
-                        <Label fx:id="depart" layoutX="13.0" layoutY="80.0" prefHeight="26.0" prefWidth="100.0" text="depart" />
+                        <Label fx:id="date_deb" layoutX="5.0" layoutY="14.0" prefHeight="59.0" prefWidth="116.0" text="date dep" />
+                        <Label fx:id="depart" layoutX="5.0" layoutY="68.0" prefHeight="59.0" prefWidth="100.0" text="depart" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="159.0" prefWidth="126.0">
                      <children>
-                        <Label fx:id="date_arr" layoutX="14.0" layoutY="22.0" prefHeight="26.0" prefWidth="116.0" text="date arr" />
-                        <Label fx:id="arrive" layoutX="11.0" layoutY="79.0" prefHeight="26.0" prefWidth="107.0" text="arrive" />
+                        <Label fx:id="date_arr" layoutX="7.0" layoutY="14.0" prefHeight="59.0" prefWidth="116.0" text="date arr" />
+                        <Label fx:id="arrive" layoutX="8.0" layoutY="73.0" prefHeight="51.0" prefWidth="107.0" text="arrive" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="prix" layoutX="71.0" layoutY="31.0" prefHeight="26.0" prefWidth="57.0" text="Prix" />
+                        <Label fx:id="prix" layoutX="70.0" layoutY="25.0" prefHeight="59.0" prefWidth="58.0" text="Prix" />
                         <JFXButton fx:id="btn_detail" layoutX="42.0" layoutY="92.0" onAction="#voirDetail" prefHeight="26.0" prefWidth="116.0" text="voir detail" />
                      </children>
                   </AnchorPane>
