--- a/src/GUI/ItemOffer.fxml
+++ b/src/GUI/ItemOffer.fxml
@@ -13,7 +13,7 @@
     <children>
       <VBox layoutX="7.0" layoutY="20.0" prefHeight="136.0" prefWidth="587.0" AnchorPane.bottomAnchor="19.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="20.0">
          <children>
-            <HBox prefHeight="57.0" prefWidth="587.0" style="-fx-border-color: black;">
+            <HBox prefHeight="57.0" prefWidth="587.0" style="-fx-border-color: #76d275;">
                <children>
                   <ImageView fx:id="img_comp" fitHeight="108.0" fitWidth="144.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
@@ -25,19 +25,19 @@
                   </ImageView>
                   <AnchorPane prefHeight="159.0" prefWidth="126.0">
                      <children>
-                        <Label fx:id="date_deb" layoutX="10.0" layoutY="22.0" prefHeight="26.0" prefWidth="116.0" text="date dep" />
-                        <Label fx:id="depart" layoutX="13.0" layoutY="80.0" prefHeight="26.0" prefWidth="100.0" text="depart" />
+                        <Label fx:id="date_deb" layoutX="10.0" layoutY="-3.0" prefHeight="60.0" prefWidth="116.0" text="date dep" />
+                        <Label fx:id="depart" layoutX="13.0" layoutY="52.0" prefHeight="54.0" prefWidth="100.0" text="depart" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="159.0" prefWidth="126.0">
                      <children>
-                        <Label fx:id="date_arr" layoutX="14.0" layoutY="22.0" prefHeight="26.0" prefWidth="116.0" text="date arr" />
-                        <Label fx:id="arrive" layoutX="11.0" layoutY="79.0" prefHeight="26.0" prefWidth="107.0" text="arrive" />
+                        <Label fx:id="date_arr" layoutX="7.0" prefHeight="54.0" prefWidth="116.0" text="date arr" />
+                        <Label fx:id="arrive" layoutX="11.0" layoutY="51.0" prefHeight="54.0" prefWidth="107.0" text="arrive" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="prix" layoutX="71.0" layoutY="31.0" prefHeight="26.0" prefWidth="57.0" text="Prix" />
+                        <Label fx:id="prix" layoutX="71.0" layoutY="23.0" prefHeight="54.0" prefWidth="58.0" text="Prix" />
                         <JFXButton fx:id="btn_detail" layoutX="42.0" layoutY="92.0" onAction="#voirDetail" prefHeight="26.0" prefWidth="116.0" text="voir detail" />
                      </children>
                   </AnchorPane>
