--- a/src/GUI/OfferInterface.fxml
+++ b/src/GUI/OfferInterface.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="GUI.OfferInterfaceController">
+<AnchorPane id="AnchorPane" prefHeight="432.0" prefWidth="1191.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.OfferInterfaceController">
     <children>
       <HBox layoutX="14.0" layoutY="18.0" prefHeight="413.0" prefWidth="200.0">
          <children>
@@ -67,7 +67,7 @@
                         <Insets top="15.0" />
                      </VBox.margin>
                   </Label>
-                  <Label fx:id="label_id" text="Id">
+                  <Label fx:id="label_id" text="Id" visible="false">
                      <VBox.margin>
                         <Insets top="17.0" />
                      </VBox.margin>
@@ -131,7 +131,7 @@
                         <Insets top="7.0" />
                      </VBox.margin>
                   </TextField>
-                  <TextField fx:id="input_id">
+                  <TextField fx:id="input_id" visible="false">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
@@ -140,9 +140,8 @@
             </VBox>
          </children>
       </HBox>
-      <TableView fx:id="tab_offer" layoutX="223.0" layoutY="14.0" onMouseClicked="#getValues" prefHeight="326.0" prefWidth="861.0">
+      <TableView fx:id="tab_offer" layoutX="223.0" layoutY="14.0" onMouseClicked="#getValues" prefHeight="326.0" prefWidth="790.0">
          <columns>
-            <TableColumn fx:id="tab_id" prefWidth="75.0" text="id" />
             <TableColumn fx:id="tab_titre" prefWidth="120.0" text="titre" />
             <TableColumn fx:id="tab_depart" prefWidth="67.20001220703125" text="depart" />
             <TableColumn fx:id="tab_dest" prefWidth="84.79998779296875" text="destination" />
