--- a/src/GUI/VolClientInterface.fxml
+++ b/src/GUI/VolClientInterface.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="852.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.VolClientInterfaceController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.VolClientInterfaceController">
    <children>
       <BorderPane prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
@@ -28,11 +28,11 @@
             </AnchorPane>
          </left>
          <center>
-            <HBox prefHeight="320.0" prefWidth="652.0" BorderPane.alignment="CENTER">
+            <HBox prefHeight="287.0" prefWidth="694.0" BorderPane.alignment="CENTER">
                <children>
-                  <ScrollPane fx:id="scrole" prefHeight="306.0" prefWidth="650.0">
+                  <ScrollPane fx:id="scrole" prefHeight="277.0" prefWidth="699.0">
                      <content>
-                        <GridPane fx:id="grid" prefHeight="118.0" prefWidth="647.0" vgap="20.0">
+                        <GridPane fx:id="grid" prefHeight="118.0" prefWidth="694.0" stylesheets="@../css/style.css" vgap="20.0">
                            <rowConstraints>
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
@@ -48,6 +48,9 @@
          <top>
             <Label fx:id="text_error" BorderPane.alignment="CENTER" />
          </top>
+         <bottom>
+            <AnchorPane prefHeight="495.0" prefWidth="1280.0" BorderPane.alignment="CENTER" />
+         </bottom>
       </BorderPane>
    </children>
 </AnchorPane>
