--- a/src/GUI/AfficheHotelClient.fxml
+++ b/src/GUI/AfficheHotelClient.fxml
@@ -1,56 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="667.0" prefWidth="1173.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheHotelClientController">
+<AnchorPane id="AnchorPane" prefHeight="583.0" prefWidth="1122.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheHotelClientController">
    <children>
-      <JFXTextField fx:id="txtHotelSearch" layoutX="166.0" layoutY="238.0" prefHeight="31.0" prefWidth="699.0" promptText="rechercher par nom/localisation" />
-      <TableView fx:id="tblhotelDetails" layoutX="70.0" layoutY="288.0" prefHeight="305.0" prefWidth="772.0">
+      <JFXTextField fx:id="txtHotelSearch" layoutX="102.0" layoutY="149.0" prefHeight="31.0" prefWidth="699.0" promptText="rechercher par nom/localisation" />
+      <TableView fx:id="tblhotelDetails" layoutX="66.0" layoutY="205.0" prefHeight="305.0" prefWidth="772.0">
          <columns>
             <TableColumn fx:id="nom_h" prefWidth="274.0" text="Nom hôtel" />
             <TableColumn fx:id="lo" prefWidth="302.0" text="Localisation" />
             <TableColumn fx:id="caté" prefWidth="198.0" text="Catégorie" />
          </columns>
       </TableView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="166.0" layoutY="124.0" prefHeight="44.0" prefWidth="635.0" text="Liste des Hôtels">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="182.0" layoutY="40.0" prefHeight="44.0" prefWidth="635.0" text="Liste des Hôtels">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <GridPane fx:id="grid_img" layoutX="914.0" layoutY="307.0" prefHeight="244.0" prefWidth="200.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Separator orientation="VERTICAL" prefHeight="200.0" />
-         </children>
-      </GridPane>
-      <Separator layoutX="914.0" layoutY="307.0" prefHeight="3.0" prefWidth="215.0" />
-      <Separator layoutX="914.0" layoutY="558.0" prefWidth="200.0" />
-      <Separator layoutX="1122.0" layoutY="311.0" orientation="VERTICAL" prefHeight="244.0" prefWidth="6.0" />
-      <Separator layoutX="6.0" layoutY="75.0" prefHeight="20.0" prefWidth="1162.0" style="-fx-background-color: #6BD5C7;" />
-      <JFXButton layoutX="252.0" layoutY="37.0" onAction="#gotoRestaurant" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Restaurant" />
-      <JFXButton layoutX="411.0" layoutY="37.0" onAction="#gotoHotel" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Hôtel" />
-      <ImageView fitHeight="46.0" fitWidth="426.0" layoutX="11.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@LOGO%20GET%20.png" />
-         </image>
-      </ImageView>
-      <JFXButton layoutX="959.0" layoutY="115.0" onAction="#gotoReservation" prefHeight="31.0" prefWidth="181.0" style="-fx-border-color: #43696D;" text="Reserver une chambre" />
+      <ImageView fx:id="imagev" fitHeight="258.0" fitWidth="224.0" layoutX="857.0" layoutY="217.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
