--- a/src/GUI/AfficheReservationClientHotel.fxml
+++ b/src/GUI/AfficheReservationClientHotel.fxml
@@ -2,18 +2,16 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="553.0" prefWidth="1038.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheReservationClientHotelController">
    <children>
-      <TableView fx:id="id_affiche" layoutX="63.0" layoutY="250.0" prefHeight="200.0" prefWidth="920.0">
+      <TableView fx:id="id_affiche" layoutX="65.0" layoutY="220.0" prefHeight="235.0" prefWidth="920.0" stylesheets="@Style.css">
          <columns>
             <TableColumn fx:id="nom_hotel" prefWidth="99.0" text="Nom Hôtel" />
             <TableColumn fx:id="type_chambre" prefWidth="123.0" text="Type Chambre" />
@@ -27,21 +25,16 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <JFXButton layoutX="486.0" layoutY="471.0" onAction="#Delete" prefHeight="31.0" prefWidth="124.0" style="-fx-background-color: #8EADB0;" text="Supprimer" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="278.0" layoutY="121.0" prefHeight="44.0" prefWidth="635.0" text="Votre liste reservation Hôtel ">
+      <JFXButton layoutX="474.0" layoutY="467.0" onAction="#Delete" prefHeight="44.0" prefWidth="124.0" style="-fx-background-color: #c9599c;" stylesheets="@Style.css" text="Supprimer">
+         <styleClass>
+            <String fx:value="search-button" />
+            <String fx:value="shadow" />
+         </styleClass></JFXButton>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="218.0" layoutY="52.0" prefHeight="44.0" prefWidth="635.0" text="Votre liste reservation Hôtel ">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="search_reservation" layoutX="98.0" layoutY="205.0" prefHeight="31.0" prefWidth="742.0" promptText="Recherche par Nom hôtel , type chambre" />
-      <Separator layoutX="17.0" layoutY="92.0" prefHeight="20.0" prefWidth="1028.0" style="-fx-background-color: #6BD5C7;" />
-      <JFXButton layoutX="231.0" layoutY="49.0" onAction="#gotoRestaurant" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Restaurant" />
-      <JFXButton layoutX="387.0" layoutY="49.0" onAction="#gotoHotel" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Hôtel" />
-      <ImageView fitHeight="46.0" fitWidth="426.0" layoutX="36.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@LOGO%20GET%20.png" />
-         </image>
-      </ImageView>
-      <JFXButton layoutX="36.0" layoutY="132.0" onAction="#gotoReservation" prefHeight="33.0" prefWidth="137.0" style="-fx-border-color: #43696D;" text="Retour" />
+      <JFXTextField fx:id="search_reservation" layoutX="98.0" layoutY="170.0" prefHeight="31.0" prefWidth="742.0" promptText="Recherche par Nom hôtel , type chambre" />
    </children>
 </AnchorPane>
