--- a/src/GUI/AfficheRestaurant.fxml
+++ b/src/GUI/AfficheRestaurant.fxml
@@ -1,102 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.geometry.Insets?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="815.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheRestaurantController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="716.0" prefWidth="864.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheRestaurantController">
    <children>
-      <JFXTextField fx:id="searchres" layoutX="156.0" layoutY="427.0" prefHeight="31.0" prefWidth="642.0" promptText="Rechercher par nom localisation spécialité ou nombre fourchet" />
-      <TableView fx:id="id_affiche" layoutX="123.0" layoutY="482.0" onMouseClicked="#getSelected" prefHeight="240.0" prefWidth="852.0">
-        <columns>
-          <TableColumn fx:id="nom_res" prefWidth="142.0" text="Nom restaurant" />
-          <TableColumn fx:id="lo" prefWidth="142.0" text="Localisation" />
-            <TableColumn fx:id="horaire" prefWidth="142.0" text="Horaire de travaille" />
-            <TableColumn fx:id="spécialité" prefWidth="142.0" text="Spécialité" />
-            <TableColumn fx:id="nbr_fourchet" prefWidth="142.0" text="nombre fourchet" />
-            <TableColumn fx:id="téléphone" prefWidth="142.0" text="Numéro téléphone" />
-        </columns>
+      <TableView fx:id="id_affiche" layoutX="20.0" layoutY="392.0" onMouseClicked="#getSelected" prefHeight="200.0" prefWidth="668.0" stylesheets="@Style.css">
+         <columns>
+            <TableColumn fx:id="nom_res" prefWidth="125.0" text="Nom restaurant" />
+            <TableColumn fx:id="lo" prefWidth="106.0" text="Localisation" />
+            <TableColumn fx:id="horaire" prefWidth="98.0" text="Horaire" />
+            <TableColumn fx:id="spécialité" prefWidth="148.0" text="Spécialité" />
+            <TableColumn fx:id="nbr_fourchet" prefWidth="86.0" text="Fourchette" />
+            <TableColumn fx:id="téléphone" prefWidth="215.0" text="Téléphone" />
+         </columns>
       </TableView>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="216.0" layoutY="123.0" prefHeight="44.0" prefWidth="635.0" text="Liste des Restaurants">
+      <JFXTextField fx:id="nom_res1" labelFloat="true" layoutX="228.0" layoutY="98.0" promptText="Nom restaurant:" />
+      <JFXTextField fx:id="localisation1" labelFloat="true" layoutX="549.0" layoutY="91.0" promptText="Localisation:" />
+      <JFXTextField fx:id="horaire1" labelFloat="true" layoutX="549.0" layoutY="244.0" promptText="Horaire de travaille:" />
+      <JFXTextField fx:id="téléphone1" labelFloat="true" layoutX="549.0" layoutY="168.0" promptText="Numéro téléphone:" />
+      <JFXTextField fx:id="nbr_fourchet1" labelFloat="true" layoutX="228.0" layoutY="244.0" promptText="Nombre de fourchette" />
+      <JFXComboBox fx:id="spécialité1" layoutX="228.0" layoutY="168.0" prefHeight="31.0" prefWidth="169.0" promptText="Spécialité:" />
+      <Label alignment="CENTER" layoutX="140.0" layoutY="14.0" prefHeight="44.0" prefWidth="641.0" text="Liste Restaurant">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <VBox layoutX="58.0" layoutY="164.0" prefHeight="348.0" prefWidth="475.0">
-         <children>
-            <JFXTextField fx:id="nom_res1" labelFloat="true" promptText="Nom restaruant:" translateX="-30.0">
-               <VBox.margin>
-                  <Insets left="100.0" top="40.0" />
-               </VBox.margin>
-            </JFXTextField>
-            <JFXTextField fx:id="localisation1" labelFloat="true" layoutX="10.0" layoutY="10.0" promptText="Localisation:" translateX="-30.0">
-               <VBox.margin>
-                  <Insets left="100.0" top="20.0" />
-               </VBox.margin>
-            </JFXTextField>
-            <JFXTextField fx:id="horaire1" labelFloat="true" layoutX="10.0" layoutY="36.0" promptText="Horaire de travaille:" translateX="-30.0">
-               <VBox.margin>
-                  <Insets left="100.0" top="20.0" />
-               </VBox.margin>
-            </JFXTextField>
-            <HBox prefHeight="59.0" prefWidth="475.0">
-               <padding>
-                  <Insets left="100.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets top="40.0" />
-               </VBox.margin>
-            </HBox>
-         </children>
-      </VBox>
-      <VBox layoutX="561.0" layoutY="171.0" prefHeight="264.0" prefWidth="475.0">
-         <children>
-            <JFXTextField fx:id="téléphone1" labelFloat="true" promptText="Numéro téléphone:" translateX="-30.0">
-               <VBox.margin>
-                  <Insets left="100.0" top="40.0" />
-               </VBox.margin>
-            </JFXTextField>
-            <JFXTextField fx:id="spécialité1" labelFloat="true" layoutX="10.0" layoutY="10.0" promptText="Spécialité:" translateX="-30.0">
-               <VBox.margin>
-                  <Insets left="100.0" top="20.0" />
-               </VBox.margin>
-            </JFXTextField>
-            <JFXTextField fx:id="nbr_fourchet1" labelFloat="true" layoutX="10.0" layoutY="36.0" promptText="Nombre de fourchet" translateX="-30.0">
-               <VBox.margin>
-                  <Insets left="100.0" top="20.0" />
-               </VBox.margin>
-            </JFXTextField>
-            <HBox prefHeight="61.0" prefWidth="475.0">
-               <padding>
-                  <Insets left="100.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets top="40.0" />
-               </VBox.margin>
-            </HBox>
-         </children>
-      </VBox>
-      <JFXButton fx:id="btnDelete" layoutX="296.0" layoutY="751.0" onAction="#Delete" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #f44336;" text="DELETE" />
-      <JFXButton fx:id="btnUpdate" layoutX="608.0" layoutY="751.0" onAction="#UpdateTable" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #008CBA;" text="UPDATE" />
-      <Separator layoutY="88.0" prefHeight="20.0" prefWidth="1220.0" style="-fx-background-color: #6BD5C7;" />
-      <JFXButton layoutX="293.0" layoutY="41.0" onAction="#gotoRestaurantAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Restaurant" />
-      <JFXButton layoutX="442.0" layoutY="41.0" onAction="#gotoHotelAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Hôtel" />
-      <ImageView fitHeight="46.0" fitWidth="426.0" layoutX="31.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@LOGO%20GET%20.png" />
-         </image>
-      </ImageView>
-      <JFXButton layoutX="1036.0" layoutY="151.0" onAction="#gotolistres" prefHeight="33.0" prefWidth="165.0" style="-fx-border-color: #436D4E;" text="List des reservation" />
-      <JFXButton layoutX="1048.0" layoutY="200.0" onAction="#gotoAjoutRestaurant" prefHeight="33.0" prefWidth="142.0" style="-fx-border-color: #436D4E;" text="Ajout restaurant" />
+      <JFXButton layoutX="267.0" layoutY="644.0" onAction="#Delete" prefHeight="44.0" prefWidth="104.0" style="-fx-background-color: #c9599c;" stylesheets="@Style.css" text="Supprimer">
+         <styleClass>
+            <String fx:value="search-button" />
+            <String fx:value="shadow" />
+         </styleClass></JFXButton>
+      <JFXButton layoutX="451.0" layoutY="644.0" onAction="#UpdateTable" prefHeight="44.0" prefWidth="104.0" style="-fx-background-color: #a399c2;" stylesheets="@Style.css" text="Modifier">
+         <styleClass>
+            <String fx:value="search-button" />
+            <String fx:value="shadow" />
+         </styleClass></JFXButton>
+      <JFXTextField fx:id="searchres" layoutX="186.0" layoutY="318.0" prefHeight="31.0" prefWidth="428.0" promptText="Rechercher par nom localisation spécialité ou nombre fourchet" />
+      <ImageView fx:id="imagev" fitHeight="181.0" fitWidth="160.0" layoutX="754.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
