--- a/src/GUI/AjoutReservationClientHotel.fxml
+++ b/src/GUI/AjoutReservationClientHotel.fxml
@@ -4,47 +4,41 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="758.0" prefWidth="1060.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjoutReservationClientController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1060.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjoutReservationClientController">
    <children>
-      <JFXDatePicker fx:id="date_arrivé" defaultColor="#008e32" layoutX="63.0" layoutY="221.0" promptText="Date d'arrivée " />
-      <JFXDatePicker fx:id="date_sortie" defaultColor="#008e32" layoutX="63.0" layoutY="311.0" promptText="Date de sortie " />
-      <JFXComboBox fx:id="mode_payment" layoutX="68.0" layoutY="405.0" prefHeight="31.0" prefWidth="195.0" promptText="Mode payment" />
-      <JFXTextField fx:id="prix_chambre" layoutX="315.0" layoutY="405.0" prefHeight="31.0" prefWidth="195.0" promptText="Nombre de personne" text="Prix Chambre" />
-      <JFXTextField fx:id="search_chambre" layoutX="565.0" layoutY="205.0" prefHeight="31.0" prefWidth="448.0" promptText="rechercher par Type ou par Nom Hôtel disponible " />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="222.0" layoutY="122.0" prefHeight="44.0" prefWidth="635.0" text="Ajout réservation hôtel">
+      <JFXDatePicker fx:id="date_arrivé" defaultColor="#008e32" layoutX="593.0" layoutY="160.0" promptText="Date d'arrivée " />
+      <JFXDatePicker fx:id="date_sortie" defaultColor="#008e32" layoutX="593.0" layoutY="250.0" promptText="Date de sortie " />
+      <JFXComboBox fx:id="mode_payment" layoutX="598.0" layoutY="344.0" prefHeight="31.0" prefWidth="195.0" promptText="Mode payment" />
+      <JFXTextField fx:id="prix_chambre" layoutX="845.0" layoutY="344.0" prefHeight="31.0" prefWidth="195.0" promptText="Nombre de personne" text="Prix Chambre" />
+      <JFXTextField fx:id="search_chambre" layoutX="56.0" layoutY="120.0" prefHeight="31.0" prefWidth="448.0" promptText="rechercher par Type ou par Nom Hôtel disponible " />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="232.0" layoutY="38.0" prefHeight="44.0" prefWidth="635.0" text="Ajout réservation hôtel">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <TableView fx:id="id_affiche_chambre" layoutX="539.0" layoutY="253.0" onMouseClicked="#getSelected" prefHeight="443.0" prefWidth="487.0">
+      <TableView fx:id="id_affiche_chambre" layoutX="36.0" layoutY="163.0" onMouseClicked="#getSelected" prefHeight="406.0" prefWidth="487.0">
         <columns>
           <TableColumn fx:id="reservation_nomHotel" prefWidth="174.0" text="Nom Hôtel" />
           <TableColumn fx:id="reservation_typeHotel" prefWidth="162.0" text="Type chambre" />
             <TableColumn fx:id="reservation_prixHotel" prefWidth="150.0" text="Prix chambre" />
         </columns>
       </TableView>
-      <JFXTextField fx:id="type_chambre" layoutX="315.0" layoutY="315.0" prefHeight="31.0" prefWidth="195.0" promptText="Nombre de personne" text="Type Chambre" />
-      <JFXTextField fx:id="nbr_personne" layoutX="190.0" layoutY="499.0" prefHeight="31.0" prefWidth="195.0" promptText="Nombre de personne" />
-      <JFXTextField fx:id="nom_hotel" layoutX="315.0" layoutY="221.0" prefHeight="31.0" prefWidth="195.0" promptText="Nombre de personne" text="Nom Hôtel" />
-      <JFXButton fx:id="btnUpdate" layoutX="250.0" layoutY="574.0" onAction="#ajout" prefHeight="26.0" prefWidth="112.0" style="-fx-background-color: #408c00;" text="Réserver" />
-      <Separator layoutY="84.0" prefHeight="20.0" prefWidth="1060.0" style="-fx-background-color: #6BD5C7;" />
-      <JFXButton layoutX="246.0" layoutY="46.0" onAction="#gotoRestaurant" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Restaurant" />
-      <JFXButton layoutX="413.0" layoutY="46.0" onAction="#gotoHotel" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Hôtel" />
-      <ImageView fitHeight="46.0" fitWidth="426.0" layoutX="5.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@LOGO%20GET%20.png" />
-         </image>
-      </ImageView>
-      <JFXButton layoutX="14.0" layoutY="127.0" onAction="#gotoHotel" prefHeight="33.0" prefWidth="101.0" style="-fx-border-color: #43696D;" text="Retour" />
-      <JFXButton layoutX="848.0" layoutY="122.0" onAction="#gotolistReservation" prefHeight="33.0" prefWidth="195.0" style="-fx-border-color: #43696D;" text="Liste de votre reservation" />
+      <JFXTextField fx:id="type_chambre" layoutX="845.0" layoutY="254.0" prefHeight="31.0" prefWidth="195.0" promptText="Nombre de personne" text="Type Chambre" />
+      <JFXTextField fx:id="nbr_personne" layoutX="598.0" layoutY="447.0" prefHeight="31.0" prefWidth="195.0" promptText="Nombre de personne" />
+      <JFXTextField fx:id="nom_hotel" layoutX="845.0" layoutY="160.0" prefHeight="31.0" prefWidth="195.0" promptText="Nombre de personne" text="Nom Hôtel" />
+      <JFXButton fx:id="btnUpdate" layoutX="712.0" layoutY="538.0" onAction="#ajout" prefHeight="44.0" prefWidth="112.0" style="-fx-background-color: #408c00;" stylesheets="@Style.css" text="Réserver">
+         <styleClass>
+            <String fx:value="shadow" />
+            <String fx:value="search-button" />
+         </styleClass></JFXButton>
+      <ImageView fx:id="image_qr" fitHeight="150.0" fitWidth="200.0" layoutX="843.0" layoutY="394.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
