--- a/src/GUI/AjouterHotel.fxml
+++ b/src/GUI/AjouterHotel.fxml
@@ -2,42 +2,41 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="584.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjouterHotelController">
+<AnchorPane id="AnchorPane" prefHeight="531.0" prefWidth="935.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjouterHotelController">
    <children>
-      <Label alignment="CENTER" layoutY="125.0" prefHeight="44.0" prefWidth="935.0" text="Ajout des hôtels">
+      <Label alignment="CENTER" layoutY="70.0" prefHeight="44.0" prefWidth="935.0" text="Ajout des hôtels">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="nom" labelFloat="true" layoutX="361.0" layoutY="194.0" promptText="Nom Hôtel:" />
-      <JFXTextField fx:id="localisation" labelFloat="true" layoutX="368.0" layoutY="275.0" promptText="Localisation:" />
-      <JFXTextField fx:id="catégorie" labelFloat="true" layoutX="368.0" layoutY="337.0" promptText="Catégorie:" />
-      <JFXButton fx:id="btnNext" layoutX="403.0" layoutY="524.0" onAction="#ajout" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" text="Ajouter">
+      <JFXTextField fx:id="nom" labelFloat="true" layoutX="361.0" layoutY="139.0" promptText="Nom Hôtel:" />
+      <JFXTextField fx:id="localisation" labelFloat="true" layoutX="368.0" layoutY="220.0" promptText="Localisation:" />
+      <JFXTextField fx:id="catégorie" labelFloat="true" layoutX="368.0" layoutY="282.0" promptText="Catégorie:" />
+      <JFXButton fx:id="btnNext" layoutX="403.0" layoutY="461.0" onAction="#ajout" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" stylesheets="@Style.css" text="Ajouter">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
+         <styleClass>
+            <String fx:value="search-button" />
+            <String fx:value="shadow" />
+         </styleClass>
       </JFXButton>
-      <JFXTextField fx:id="img" layoutX="368.0" layoutY="417.0" promptText="Image" />
-      <JFXButton fx:id="btnNext1" layoutX="202.0" layoutY="417.0" onAction="#get_image" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" text="Parcourir">
+      <JFXTextField fx:id="img" layoutX="368.0" layoutY="362.0" promptText="Image" />
+      <JFXButton fx:id="btnNext1" layoutX="202.0" layoutY="362.0" onAction="#get_image" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" stylesheets="@Style.css" text="Parcourir">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
+         <styleClass>
+            <String fx:value="search-button" />
+            <String fx:value="shadow" />
+         </styleClass>
       </JFXButton>
-      <Separator layoutY="95.0" prefHeight="20.0" prefWidth="978.0" style="-fx-background-color: #6BD5C7;" />
-      <JFXButton layoutX="268.0" layoutY="47.0" onAction="#gotoRestaurantAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Restaurant" />
-      <JFXButton layoutX="446.0" layoutY="47.0" onAction="#gotoHotelAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Hôtel" />
-      <ImageView fitHeight="46.0" fitWidth="426.0" layoutX="31.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@LOGO%20GET%20.png" />
-         </image>
-      </ImageView>
-      <JFXButton layoutX="31.0" layoutY="131.0" onAction="#gotoHotelAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Retour" />
+      <ImageView fx:id="imagev" fitHeight="166.0" fitWidth="234.0" layoutX="634.0" layoutY="327.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
