--- a/src/GUI/AjouterRestaurant.fxml
+++ b/src/GUI/AjouterRestaurant.fxml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjouterRestaurantController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AjouterRestaurantController">
    <children>
-      <Label alignment="CENTER" layoutX="-13.0" layoutY="75.0" prefHeight="44.0" prefWidth="1020.0" text="Ajout des restaurants">
+      <JFXButton fx:id="btnNext" layoutX="354.0" layoutY="460.0" onAction="#ajout" prefHeight="44.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" stylesheets="@Style.css" text="Ajouter">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+         <styleClass>
+            <String fx:value="shadow" />
+            <String fx:value="search-button" />
+         </styleClass>
+      </JFXButton>
+      <Label alignment="CENTER" layoutX="44.0" layoutY="11.0" prefHeight="44.0" prefWidth="658.0" text="Ajout des restaurants">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <Separator layoutY="55.0" prefHeight="20.0" prefWidth="1176.0" style="-fx-background-color: #6BD5C7;" />
-      <JFXButton layoutX="282.0" layoutY="16.0" onAction="#gotoRestaurantAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Restaurant" />
-      <JFXButton layoutX="469.0" layoutY="16.0" onAction="#gotoHotelAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Hôtel" />
-      <ImageView fitHeight="46.0" fitWidth="426.0" layoutX="14.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@LOGO%20GET%20.png" />
-         </image>
-      </ImageView>
-      <JFXTextField fx:id="nom_res" labelFloat="true" layoutX="247.0" layoutY="311.0" promptText="Nom restaruant:" />
-      <JFXTextField fx:id="localisation" labelFloat="true" layoutX="578.0" layoutY="240.0" promptText="Localisation:" />
-      <JFXTextField fx:id="horaire" labelFloat="true" layoutX="578.0" layoutY="311.0" promptText="Horaire de travaille:" />
-      <JFXTextField fx:id="téléphone" labelFloat="true" layoutX="247.0" layoutY="240.0" promptText="Numéro téléphone:" />
-      <JFXTextField fx:id="spécialité" labelFloat="true" layoutX="247.0" layoutY="158.0" promptText="Spécialité:" />
-      <JFXTextField fx:id="nbr_fourchet" labelFloat="true" layoutX="578.0" layoutY="158.0" promptText="Nombre de fourchet" />
-      <JFXButton fx:id="btnNext" layoutX="449.0" layoutY="382.0" onAction="#ajout" prefHeight="32.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" text="Ajouter">
+      <JFXTextField fx:id="nom_res" labelFloat="true" layoutX="131.0" layoutY="96.0" promptText="Nom restaurant:" />
+      <JFXTextField fx:id="localisation" labelFloat="true" layoutX="452.0" layoutY="89.0" promptText="Localisation:" />
+      <JFXTextField fx:id="horaire" labelFloat="true" layoutX="452.0" layoutY="242.0" promptText="Horaire de travaille:" />
+      <JFXTextField fx:id="téléphone" labelFloat="true" layoutX="461.0" layoutY="175.0" promptText="Numéro téléphone:" />
+      <JFXTextField fx:id="nbr_fourchet" labelFloat="true" layoutX="131.0" layoutY="242.0" promptText="Nombre de fourchette" />
+      <JFXComboBox fx:id="spécialité" layoutX="131.0" layoutY="166.0" prefHeight="31.0" prefWidth="169.0" promptText="Spécialité:" />
+      <JFXTextField fx:id="img" alignment="CENTER" layoutX="320.0" layoutY="339.0" promptText="Image" />
+      <JFXButton fx:id="btnNext1" layoutX="143.0" layoutY="336.0" onAction="#get_image" prefHeight="44.0" prefWidth="115.0" style="-fx-background-color: #4CAF50;" stylesheets="@Style.css" text="Parcourir">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
+         <styleClass>
+            <String fx:value="shadow" />
+            <String fx:value="search-button" />
+         </styleClass>
       </JFXButton>
-      <JFXButton layoutX="25.0" layoutY="97.0" onAction="#gotoRestaurantAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Retour" />
+      <ImageView fx:id="imagev" fitHeight="150.0" fitWidth="190.0" layoutX="537.0" layoutY="313.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
