--- a/src/GUI/afficheReservationAdmin.fxml
+++ b/src/GUI/afficheReservationAdmin.fxml
@@ -2,46 +2,39 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="1212.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheReservationAdminController">
+<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="1102.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.AfficheReservationAdminController">
    <children>
-      <TableView fx:id="id_affiche" layoutX="49.0" layoutY="189.0" prefHeight="240.0" prefWidth="1163.0">
+      <TableView fx:id="id_affiche" layoutX="2.0" layoutY="184.0" prefHeight="240.0" prefWidth="1108.0" styleClass="transparent" stylesheets="@Style.css">
          <columns>
             <TableColumn fx:id="nom_user" prefWidth="110.0" text="Nom client" />
             <TableColumn fx:id="prénom_user" prefWidth="120.0" text="Prénom client" />
             <TableColumn fx:id="email" prefWidth="110.0" text="email client" />
             <TableColumn fx:id="nom_hotel" prefWidth="110.0" text="Nom hôtel" />
             <TableColumn fx:id="type" prefWidth="110.0" text="Type chambre" />
-            <TableColumn fx:id="prix" prefWidth="110.0" text="Prix" />
-            <TableColumn fx:id="date_entree" prefWidth="110.0" text="Date entrée" />
-            <TableColumn fx:id="date_sortie" prefWidth="128.0" text="Date sortie" />
-            <TableColumn fx:id="mode_payment" prefWidth="128.0" text="Mode payment " />
-            <TableColumn fx:id="date_creation" prefWidth="128.0" text="Date Création" />
+            <TableColumn fx:id="prix" prefWidth="75.0" text="Prix" />
+            <TableColumn fx:id="date_entree" prefWidth="122.0" text="Date entrée" />
+            <TableColumn fx:id="date_sortie" prefWidth="106.0" text="Date sortie" />
+            <TableColumn fx:id="mode_payment" prefWidth="135.0" text="Mode payment " />
+            <TableColumn fx:id="date_creation" prefWidth="166.0" text="Date Création" />
          </columns>
       </TableView>
-      <JFXButton layoutX="552.0" layoutY="439.0" onAction="#Delete" prefHeight="31.0" prefWidth="124.0" style="-fx-background-color: #8EADB0;" text="Supprimer" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="319.0" layoutY="94.0" prefHeight="44.0" prefWidth="635.0" text="Liste reservation Hôtel">
+      <JFXButton layoutX="494.0" layoutY="434.0" onAction="#Delete" prefHeight="44.0" prefWidth="124.0" style="-fx-background-color: #c9599c;" stylesheets="@Style.css" text="Supprimer">
+         <styleClass>
+            <String fx:value="search-button" />
+            <String fx:value="shadow" />
+         </styleClass></JFXButton>
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="297.0" layoutY="40.0" prefHeight="44.0" prefWidth="635.0" text="Liste reservation Hôtel">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
       <JFXTextField fx:id="search_restaurant" layoutX="67.0" layoutY="142.0" prefHeight="31.0" prefWidth="742.0" promptText="Recherche par Nom,prénom,nom hôtel , type chambre et mode payment" />
-      <Separator layoutX="-2.0" layoutY="64.0" prefHeight="20.0" prefWidth="1212.0" style="-fx-background-color: #6BD5C7;" />
-      <JFXButton layoutX="485.0" layoutY="18.0" onAction="#gotoRestaurantAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Restaurant" />
-      <JFXButton layoutX="319.0" layoutY="18.0" onAction="#gotoHotelAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Hôtel" />
-      <ImageView fitHeight="46.0" fitWidth="426.0" layoutX="55.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@LOGO%20GET%20.png" />
-         </image>
-      </ImageView>
-      <JFXButton layoutX="55.0" layoutY="99.0" onAction="#gotoHotelAd" prefHeight="31.0" prefWidth="119.0" style="-fx-border-color: #436D4E;" text="Retour" />
    </children>
 </AnchorPane>
